# OpenCell

./: .gitignore  CMakeLists.txt  README.md
core/: mesh.cpp  vec4.h
extensions/: CMakeLists.txt
fruit_core/: platform.h
fruit_extensions/: NvFlexImplFruit.h  NvFlexImplFruitExt.h
include/: AbstComputeController.h  Fruit.h  FruitExt.h  FruitExtTypes.h  NvFlexExt.h  cell.h  environment.h  scene_cell.h  serialize_types.h  stb_truetype.h
include/components/: component.h  cytoplasm.h  cytoskeleton.h  kernel.h  ligands.h  protein.h  receptors.h  shell.h
include/fruit_extensions/: NvFlexImplFruit.h  NvFlexImplFruitExt.h
lib/win64/: NvFlexExtDebugCUDA_x64.exp  NvFlexExtReleaseCUDA_x64.exp
presentations/: Компьютерное моделирование.pptx
src/: BiologyObject.h  CMakeLists.txt  SceneCell.cpp  SceneCell.h  Serializer.h  Timer.h  Utilits.cpp  Utilits.h  Video.cpp  Video.h  biology_object.h  cell.cpp  cell.h  main.cpp  scene_cell.cpp  scenes.h  shaders.h
src/components/: Branch.cpp  Branch.h  Cytoplasm.cpp  Cytoskeleton.cpp  Kernel.cpp  Ligands.cpp  Ligands.h  Receptors.h  Shell.cpp  component.h  cytoplasm.h  cytoskeleton2.cpp  cytoskeleton2.h  kernel.h  protein.h  receptors.cpp  shell.h
src/controller/: ConsoleController.cpp  ConsoleController.h  SDLController.cpp  SDLController.h
src/controller/compute_controller/: ComputeController.cpp  ComputeController.h  FlexController.cpp  FlexController.h  FlexParams.cpp  FlexParams.h  FruitSimBuffers.h  SimBuffers.cpp  SimBuffers.h
src/controller/imgui_controller/: IMGUIController.cpp  IMGUIController.h  imgui.cpp  imgui.h
src/controller/render_controller/: Camera.h  RenderBuffer.h  RenderController.cpp  RenderController.h  RenderParam.h  Shadows.cpp  Shadows.h  Window.cpp
src/controller/render_controller/Fluid/: FluidBuffer.cpp  FluidBuffer.h  FluidRenderer.cpp  FluidRenderer.h
src/opengl/: imguiRenderGL.cpp  shader.cpp  shadersGL.cpp
src/scenes/: BiologyObject.h  SceneCell.cpp  SceneCell.h  cell.cpp  cell.h
src/scenes/components/: Branch.cpp  Branch.h  Cytoplasm.cpp  Cytoskeleton.cpp  Cytoskeleton.h  Kernel.cpp  Ligands.h  Receptors.h  Shell.cpp  component.h  cytoplasm.h  cytoskeleton2.cpp  cytoskeleton2.h  kernel.h  protein.h  shell.h
src/utilits/: Logger.h  PrimitiveFactories.cpp  PrimitiveFactories.h  Primitives.h  Property.h  Serializer.h  Timer.h  Utilits.cpp  Utilits.h  Video.cpp  Video.h
test/: CMakeLists.txt  SerializerTest.h  TestBuffers.h  TestLogging.h  TestState.h  comparators.cpp  comparators.h  main.cpp  test_case.cpp  test_state.h
